--- a/src/components/_characters.scss
+++ b/src/components/_characters.scss
@@ -19,11 +19,29 @@
 .char-img {
   width: 100%;
   height: 280px;
+  position: relative;
 
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .status {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    padding: 5px 30px;
+    color: #fff;
+    display: block;
+
+    &.alive {
+      background-color: green;
+    }
+
+    &.dead {
+      background-color: orange;
+    }
   }
 }
 
@@ -63,5 +81,9 @@
 @media screen and (max-width: 500px) {
   .characters ul {
     grid-template-columns: 1fr;
+  }
+
+  .char-img {
+    height: 360px;
   }
 }
